src/App.scss
/* Colors */
$color-brand: #246BFD;
$color-text: #273240;
$color-tab: #5D5D9C;
$color-dark-grey: #BDBDBD;
$color-grey: #D5D5E1;
$color-light-grey: #F3F3F8;
$color-white: #ffffff;

/* Media Query Sizes */
$screen-xs-max: 710px;
$screen-md: 900px;

body {
  background-color: $color-light-grey;
}

/* Global static classes start */
.gradient-0 {
  background: linear-gradient(106.15deg, #042843 1.98%, #726E9E 98%);
}

.gradient-1 {
  background: linear-gradient(106.15deg, #52B6FE 1.98%, #726E9E 98%);
}

.gradient-2 {
  background: linear-gradient(106.15deg, #7E108F 1.98%, #726E9E 98%);
}

.gradient-3 {
  background: linear-gradient(106.15deg, #31DBB2 1.98%, #726E9E 98%);
}

.grocery {
  background: rgba(50, 167, 226, 0.1);
}

.work {
  background: rgba(34, 176, 125, 0.1);
}

.equipments {
  background: rgba(255, 135, 0, 0.1);
}

.entertainment {
  background: rgba(181, 72, 198, 0.1);
}

.pointer {
  cursor: pointer;
}

.card-blur {
  filter: blur(4px);
}
/* Global static classes end */

.App {
  min-height: 100vh;
  max-height: 100vh;
  padding: 0;
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.name-section {
  font-size: 14px;
  font-family: Poppins, sans-serif;
  max-width: 948px;
  margin: auto;
  padding: 3em 1rem 1rem 1.75rem;

  .title {
    color: $color-dark-grey;
    margin: 0;
  }

  .name {
    color: $color-text;
    text-transform: capitalize;
  }
}

.wrapper {
  @media screen and (min-width: $screen-xs-max) {
    display: flex;
    flex-direction: row;
    justify-content: center;
    max-height: 800px;
  }
}

.credit-card {
  width: 312px;
  height: 174px;
  border-radius: 15px;
  color: $color-white;
  cursor: pointer;

  @media screen and (min-width: $screen-xs-max) {
    margin: 1rem auto;
  }

  @media screen and (max-width: $screen-xs-max) {
    display: inline-block;
    margin: .5rem;

    &:first-child {
      margin-left: 28px;
    }
  }

  &__logo {
    width: 49px;
    height: 49px;
  }

  &__body {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    height: 100%;
    padding: 0 1.25rem;
  }

  &__number {
    font-family: 'IBM Plex Mono', monospace;
    font-size: 16px;
    line-height: 21px;
    letter-spacing: 0.2em;
    font-weight: 600;
  }

  &__bottom {
    display: flex;
    justify-content: space-between;
    width: 100%;
    font-family: 'IBM Plex Mono', sans-serif;
    text-transform: uppercase;
  }

  &__name {
    display: flex;
    flex-direction: column;

    &-title {
      font-weight: 400;
      font-size: 12px;
    }

    &-text {
      font-weight: 600;
    }
  }

  &__expiration-date {
    display: flex;
    flex-direction: column;

    &-title {
      font-weight: 400;
      font-size: 12px;
    }
  }
}

.credit-card-container {
  @media screen and (min-width: $screen-xs-max) {
    width: 100%;
    height: 100%;
    max-width: 408px;
    background: $color-white;
    margin: 0 .5rem;
    padding: 1rem 0;
    position: relative;

    .title {
      font-size: 20px;
      font-family: Poppins, sans-serif;
      font-weight: 500;
      margin-left: 3rem;
      margin-top: 3rem;
    }

    .cards {
      overflow-y: scroll;
      height: 100%;
      margin: 0;
      padding: 0;
      max-height: 750px;
    }
  }

  @media screen and (max-width: $screen-xs-max) {
    overflow-x: scroll;
    white-space: nowrap;

    .title {
      display: none;
    }

    &::-webkit-scrollbar {
      display: none;
    }
  }
}

.add-card-button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 319px;
  height: 48px;
  color: $color-brand;
  border: 1px solid $color-brand;
  background: transparent;
  border-radius: 8px;
  font-family: Poppins, sans-serif;
  margin: 0.5rem auto 0 auto;
  padding: 0;
  font-size: 14px;
  cursor: pointer;

  &__plus {
    width: 16px;
    height: 16px;
  }

  @media screen and (min-width: $screen-xs-max) {
    // hide add card button on desktop
    display: none;
  }
}

.transactions {
  background: $color-white;

  @media screen and (min-width: $screen-xs-max) {
    width: 100%;
    max-width: 460px;
    margin: 0 .5rem;
    border-radius: .5rem;
    overflow-y: scroll;
    padding: 1em 2rem;
  }

  @media screen and (max-width: $screen-xs-max) {
    z-index: 5;
    border-radius: 2em 2em 0 0;
    height: 420px;
    margin-top: 1.5em;
    padding: 1.75em;
    overflow-y: scroll;
    -ms-overflow-style: none; /* IE and Edge */

    &::-webkit-scrollbar {
      display: none;
    }
  }

  .title {
    font-family: Poppins, sans-serif;
    font-size: 12px;
    font-weight: 400;
    color: $color-text;
    margin-top: 1em;
  }

  &__top {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .amount {
      font-family: 'IBM Plex Mono', monospace;
      font-weight: 700;
      font-size: 24px;
      color: $color-text;
    }
  }
}

.expenses {
  overflow-y: scroll;
}

.expense-item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 1em 0;
  overflow-y: hidden;

  .icon {
    flex-shrink: 1;
    border-radius: 15px;
    margin-right: 1em;
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      width: 1.25em;
    }
  }

  .info {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
  }

  .top {
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-weight: 500;
    color: $color-text;
    text-transform: capitalize;

    @media screen and (max-width: $screen-xs-max) {
      font-family: Poppins, sans-serif;
      font-size: 13px;
    }

    @media screen and (min-width: $screen-xs-max) {
      font-family: Poppins, sans-serif;
      font-size: 16px;
    }
  }

  .bottom {
    display: flex;
    align-items: center;
    justify-content: space-between;

    font-family: Poppins, sans-serif;
    font-size: 12px;
    color: $color-text;
    font-weight: 400;
    opacity: 0.5;
  }
}

/* Bottom Navigation mobile */
.bottom-navigation {
  position: absolute;
  bottom: 0;
  left: 0;
  display: flex;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  background: $color-white;

  img {
    width: 1.5rem;
    height: 1.5rem;
    padding: 1rem;
  }

  @media screen and (min-width: $screen-xs-max) {
    display: none;
  }
}

.circle-add-button {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  width: 60px;
  height: 60px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: -2rem;
  background: $color-brand;
  border-radius: 50%;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  cursor: pointer;

  @media screen and(max-width: $screen-xs-max) {
    display: none;
  }
}

.dialog-close {
  display: flex;
  justify-content: flex-end;

  img {
    padding: 1.5rem 1.5rem 0 0;
  }
}

.dialog-title {
  display: flex;
  justify-content: space-around;
  padding: 1rem;

  .back-icon {
    flex-shrink: 1;
  }

  .text {
    flex-grow: 1;
    text-align: center;
    font-family: Poppins, sans-serif;
    font-weight: 500;
    font-size: 20px;
  }

  @media screen and (max-width: $screen-xs-max) {
    border-bottom: 1px solid $color-light-grey;
  }
}

.dialog-content {
  padding: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  .label {
    display: block;
    font-family: Poppins, sans-serif;
    font-weight: 500;
    font-size: 14px;
    margin-top: 1rem;
  }

  .input {
    box-sizing: border-box;
    border: 1px solid #e8eaeb;
    border-radius: 0.5rem;
    padding: 0.75rem 0 0.75rem 1.5rem;
    margin: .25rem 0;
    width: 100%;
    font-family: Poppins, sans-serif;
    font-weight: 300;
    font-size: 14px;
  }

  .half-row {
    display: flex;

    div:first-child {
      margin-right: 1rem;
    }
  }

  .top {
    padding: 1rem 1.5rem;

    @media screen and (min-width: $screen-xs-max) {
      padding: 0 3rem;
    }
  }

  .bottom {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 80px;

    @media screen and (max-width: $screen-xs-max) {
      border-radius: 20px 20px 0 0;
      box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.03);
    }

    @media screen and (min-width: $screen-xs-max) {
      margin-bottom: 1rem;
    }

    button {
      border-radius: 0.5rem;
      background: $color-brand;
      color: $color-white;
      width: 100%;
      outline: none;
      border: none;
      padding: .75rem 1rem;
      margin: 0 1.75rem;

      @media screen and (min-width: $screen-xs-max) {
        margin: 3rem;

      }
    }
  }
}

